--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -1,8 +1,23 @@
 /* Welcome to Compass.
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+ * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+*/
 
 body {
-  background: #f00;
+  background : #333;
+}
+
+.header {
+  background : #fff;
+}
+
+.content {
+  padding : 20px;
+  background : #fff;
+}
+
+.footer {
+  padding : 20px;
+  color   : #fff;
 }
