--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -1,5 +1,26 @@
 /* Welcome to Compass.
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 6, ../../sass/screen.scss */
+ * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+*/
+/* line 7, ../../sass/screen.scss */
+body {
+  background: #333;
+}
+
+/* line 11, ../../sass/screen.scss */
+.header {
+  background: #fff;
+}
+
+/* line 15, ../../sass/screen.scss */
+.content {
+  padding: 20px;
+  background: #fff;
+}
+
+/* line 20, ../../sass/screen.scss */
+.footer {
+  padding: 20px;
+  color: #fff;
+}
