Huge commit. Changing the layout of headers, content, and footers. Updating the navigation to allow for a more homogenous login/logout experience. Adding functions to standardize checking if the admin is authenticated

--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -19,7 +19,11 @@ body {
 
 .footer {
   padding : 20px;
-  color   : #fff;
+  color   : #ddd;
+
+  a {
+    color: #c00;
+  }
 }
 
 #portalcontent {
